Fix appearance of TextControls on iOS

--- a/src/components/MultilineTextControl/index.css
+++ b/src/components/MultilineTextControl/index.css
@@ -20,7 +20,9 @@
 }
 
 .MultilineTextControl-element {
+  appearance: none;
   border: 1px solid #1d1d1d;
+  border-radius: 0;
   box-shadow: inset 0.25rem 0.25rem #d2d2d2;
   font: 300 1.25rem/1.75rem system-ui;
   margin-top: 0.5rem;
